# BizIntel

./: .env.example  .gitignore  README.md  copilot_context.md  pyproject.toml
.github/: copilot-instructions.md
docs/: architecture_flowchart.html  architecture_flowchart_lg_v1.html  architecture_flowchart_lg_v2.html  architecture_flowchart_lg_v2_old.html  architecture_flowchart_v2.html  architecture_flowchart_v3.html  design_decisions_v2_old.html  interview_prep.html  interview_prep_lg_v1.html  sample_queries_and_responses.md
eval/: eval_dataset.py  evaluator.py  run_eval.py
eval/results/: eval_20260317_105027.csv  eval_20260317_120243_with_rerank.csv  eval_20260318_120118_with_weighted_hybrid_search.json  eval_20260318_122141_with_groq_weighted_hybrid_search.json  (+2 more)
eval_results/: eval_20260317_105027.json  eval_20260317_120243_with_rerank.json  eval_20260317_164527_with_hybrid_search.csv  eval_20260317_164527_with_hybrid_search.json  eval_20260318_120118_with_weighted_hybrid_search.csv  eval_20260318_122141_with_groq_weighted_hybrid_search.csv  eval_20260321_115603_with_Guardrails.csv  eval_20260321_115603_with_Guardrails.json  eval_20260321_161351_with_langgraph_v1.csv  eval_20260321_161351_with_langgraph_v1.json  eval_20260322_180701.csv  eval_20260322_180701.json  eval_20260323_154605_with_lg_v1_openai.csv  eval_20260323_154605_with_lg_v1_openai.json  eval_20260324_123802_with_lg_v2.csv  eval_20260324_123802_with_lg_v2.json
notebooks/: data_analysis.ipynb  eval_visualization.ipynb  graph_visualization.ipynb
scripts/: batch_embed.py
tests/: spot_check.py
(+50 files in other folders)
